--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "next": "14.0.2",
+    "prettier": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "eslint-config-next": "14.0.2",
+    "eslint-plugin-import": "^2.29.0",
+    "postcss": "^8",
+    "prettier-plugin-css-order": "^2.0.1",
+    "tailwindcss": "^3.3.0"
   }
 }
